--- a/templates/previsao.html
+++ b/templates/previsao.html
@@ -15,7 +15,26 @@
 		<h2>{{ prev_hora_1 }}: Min:{{ prev_1_1 }} e Max:{{  prev_1_2  }} </h2>
 		<h2>{{ prev_hora_2 }}: Min:{{ prev_2_1 }} e Max:{{  prev_2_2  }} </h2>
 		<h2>{{ prev_hora_3 }}: Min:{{ prev_3_1 }} e Max:{{  prev_3_2  }} </h2>
+
 		<h2>{{ prev_hora_4 }}: Min:{{ prev_4_1 }} e Max:{{  prev_4_2  }} </h2>
+		<h2>{{ prev_hora_5 }}: Min:{{ prev_5_1 }} e Max:{{  prev_5_2  }} </h2>
+		<h2>{{ prev_hora_6 }}: Min:{{ prev_6_1 }} e Max:{{  prev_6_2  }} </h2>
+		<h2>{{ prev_hora_7 }}: Min:{{ prev_7_1 }} e Max:{{  prev_7_2  }} </h2>
+
+		<h2>{{ prev_hora_8 }}: Min:{{ prev_8_1 }} e Max:{{  prev_8_2  }} </h2>
+		<h2>{{ prev_hora_9 }}: Min:{{ prev_9_1 }} e Max:{{  prev_9_2  }} </h2>
+		<h2>{{ prev_hora_10 }}: Min:{{ prev_10_1 }} e Max:{{  prev_10_2  }} </h2>
+		<h2>{{ prev_hora_11 }}: Min:{{ prev_11_1 }} e Max:{{  prev_11_2  }} </h2>
+
+		<h2>{{ prev_hora_12 }}: Min:{{ prev_12_1 }} e Max:{{  prev_12_2  }} </h2>
+		<h2>{{ prev_hora_13 }}: Min:{{ prev_13_1 }} e Max:{{  prev_13_2  }} </h2>
+		<h2>{{ prev_hora_14 }}: Min:{{ prev_14_1 }} e Max:{{  prev_14_2  }} </h2>
+		<h2>{{ prev_hora_15 }}: Min:{{ prev_15_1 }} e Max:{{  prev_15_2  }} </h2>
+
+		<h2>{{ prev_hora_16 }}: Min:{{ prev_16_1 }} e Max:{{  prev_16_2  }} </h2>
+		<h2>{{ prev_hora_17 }}: Min:{{ prev_17_1 }} e Max:{{  prev_17_2  }} </h2>
+		<h2>{{ prev_hora_18 }}: Min:{{ prev_18_1 }} e Max:{{  prev_18_2  }} </h2>
+		<h2>{{ prev_hora_19 }}: Min:{{ prev_19_1 }} e Max:{{  prev_19_2  }} </h2>
 		<br>
 		<button onclick="javascript:history.go(-1);">Voltar</button>
 	</body>
